# zotero-pdf-processing

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
lib/zotero/: __init__.py  temp.md
models/: zotero_docs.py
